--- a/Q9/style.css
+++ b/Q9/style.css
@@ -1,9 +1,9 @@
-.category{
+.navFunctionlity{
     display: flex;
     justify-content: space-around;
 }
 
-.displayContainer{
+.productsContainer{
     display: flex;
     flex-wrap: wrap;
 }
@@ -18,6 +18,6 @@
 }
 
 .cardImage{
-    height: auto;
+    height: 250px;
     max-width: 100%;
 }
