--- a/CRUD - todo/style.css
+++ b/CRUD - todo/style.css
@@ -6,5 +6,6 @@
 
 .todos{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
+    grid-template-columns: repeat(5,1fr);
 }
